--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rtivital/ts-package-template",
-  "description": "A template for TypeScript packages",
+  "name": "mantine-form-zod-resolver",
+  "description": "Zod resolver for @mantine/form validation",
   "packageManager": "yarn@4.0.0",
   "version": "0.3.0",
   "type": "module",
@@ -15,12 +15,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rtivital/ts-package-template.git"
+    "url": "git+https://github.com/mantinedev/mantine-form-zod-resolver.git"
   },
   "bugs": {
-    "url": "https://github.com/rtivital/ts-package-template/issues"
+    "url": "https://github.com/mantinedev/mantine-form-zod-resolver/issues"
   },
-  "homepage": "https://github.com/rtivital/ts-package-template#readme",
+  "homepage": "https://github.com/mantinedev/mantine-form-zod-resolver#readme",
   "main": "./dist/cjs/index.js",
   "types": "./dist/types/index.d.ts",
   "module": "./dist/esm/index.mjs",
@@ -53,10 +53,15 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.4",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/fs-extra": "^11",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.8.9",
     "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/signale": "^1",
     "@types/yargs": "^17.0.29",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
@@ -67,10 +72,12 @@
     "execa": "^8.0.1",
     "fs-extra": "^11.1.1",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "new-github-release-url": "^2.0.0",
     "open": "^9.1.0",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
     "rollup": "^4.1.4",
     "rollup-plugin-esbuild": "^6.1.0",
