--- a/package.json
+++ b/package.json
@@ -49,46 +49,50 @@
     "release": "npm test && esno scripts/release"
   },
   "devDependencies": {
-    "@mantine/form": "^7.2.1",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-replace": "^5.0.4",
-    "@testing-library/dom": "^9.3.3",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
+    "@eslint/js": "^9.27.0",
+    "@mantine/form": "^8.0.1",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-replace": "^6.0.2",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/eslint-plugin-jsx-a11y": "^6",
     "@types/fs-extra": "^11",
-    "@types/jest": "^29.5.6",
-    "@types/node": "^20.8.9",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/signale": "^1",
-    "@types/yargs": "^17.0.29",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
-    "esbuild": "^0.19.5",
-    "eslint": "^8.52.0",
-    "esno": "^0.17.0",
-    "execa": "^8.0.1",
-    "fs-extra": "^11.1.1",
+    "@types/yargs": "^17.0.33",
+    "esbuild": "^0.25.4",
+    "eslint": "^9.27.0",
+    "eslint-config-mantine": "^4.0.3",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "esno": "^4.8.0",
+    "execa": "^9.5.3",
+    "fs-extra": "^11.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "new-github-release-url": "^2.0.0",
-    "open": "^9.1.0",
-    "prettier": "^3.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rimraf": "^5.0.5",
-    "rollup": "^4.1.4",
-    "rollup-plugin-esbuild": "^6.1.0",
-    "rollup-plugin-node-externals": "^6.1.2",
+    "open": "^10.1.2",
+    "prettier": "^3.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.41.1",
+    "rollup-plugin-esbuild": "^6.2.1",
+    "rollup-plugin-node-externals": "^8.0.0",
     "signale": "^1.4.0",
-    "simple-git": "^3.20.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2",
+    "simple-git": "^3.27.0",
+    "ts-jest": "^29.3.4",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1",
     "version-next": "^1.0.2",
     "yargs": "^17.7.2",
-    "zod": "^3.22.4"
+    "zod": "^3.25.28"
   },
   "peerDependencies": {
     "@mantine/form": ">=7.0.0",
